Complete desktop interaction, accessibility, and native presentation conformance
Assisted-by: codex:gpt-5.6-sol